# ptcgp-data-api

./: .coveragerc  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  BENCHMARKS.md  CHANGELOG.md  CODEX_DEVELOPMENT_GUIDELINES.md  LICENSE  README.md  main.py  models.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  railway_logs.yml  security.yml
app/: __init__.py  auth.py  data.py
app/routes/: cards.py  meta.py  users.py
data/: cards.json  sets.json  tournaments.json
scripts/: summary.py
src/: main.py
src/ptcgp_api/: __init__.py  auth.py  data.py  models.py
src/ptcgp_api/routes/: cards.py  meta.py  users.py
tests/: conftest.py  test_api.py  test_data.py  test_image_cache.py
tests/data/: cards.json  events.json  sets.json
tests/performance/: test_filter_perf.py
